<resources>
    <string name="app_name">WeForgot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Anonymous</string>
    <string name="nav_header_subtitle">Anonymous</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_items">Items</string>
    <string name="menu_reminders">Reminders</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync with cloud</string>
    <string name="attachment_title">Authenticate</string>
    <string name="attachment_summary_on">You\'re authenticated and you can sync with cloud.
    </string>
    <string name="attachment_summary_off">Authenticate to be able to sync in the cloud</string>
    <string name="default_txt_starttime">TextView</string>
    <string name="default_string_button">Edit</string>
    <string name="default_string_endhour">end</string>
    <string name="default_string_item_name">item_name</string>
    <string name="item_picture">Item picture</string>
    <string name="sync_pictures">Sync pictures</string>
    <string name="attachment_pictures_on">You\'re syncing pictures</string>
    <string name="attachment_pictures_off">You do not sync pictures.</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">name</string>
    <string name="nameTextView">Name:</string>
    <!-- <string name="default_web_client_id">AIzaSyDfUAs8lK6J0GVs9D0YKOWFb3LcaKnwgeM</string> -->
</resources>