<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="self.joanciscar.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_reminders"
            app:destination="@id/nav_reminders" />
        <action
            android:id="@+id/action_nav_home_to_nav_items"
            app:destination="@id/nav_items" />
    </fragment>

    <fragment
        android:id="@+id/nav_items"
        android:name="self.joanciscar.myapplication.ui.items.ItemsFragment"
        android:label="@string/menu_items"
        tools:layout="@layout/fragment_items" />

    <fragment
        android:id="@+id/nav_reminders"
        android:name="self.joanciscar.myapplication.ui.reminders.RemindersFragment"
        android:label="@string/menu_reminders"
        tools:layout="@layout/fragment_alarms" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="self.joanciscar.myapplication.ui.settings.SettingsFragment"
        android:label="@string/menu_reminders"
        tools:layout="@layout/settings_activity"
        />
</navigation>